# SMLDLProject

./: .gitignore  README.md  batch_inference_pipeline.py  build_final_dataset.py  feature_pipeline.py  koda_processor.py  merge_datasets.py  one_day_aggr.py  pyproject.toml  requirements.txt  run_year_route_dataset.py  train.py  train_avg_occupancy_lgbm.py  train_hopsworks_fv_splits.py  train_max_occupancy_lgbm.py  verify_route.py
.github/workflows/: daily_feature_pipline.yml  daily_inference_pipeline.yml  daily_inference_pipline.yml
backfill/: backfill_rt_data.py  build_datasets.py  count_properties.py  feature_backfill.ipynb  koda_processor.py  run_backfill.py  run_month_route_dataset.py  run_year_route_dataset.py  select_route.py  train_hopsworks_fv_splits.py
docs/: dashboard_data.json  index.html  index.md  style.css
src/hopsworks_jobs/: export_past_traffic.py  get_existing_dates.py
src/pipelines/: batch_inference_pipeline.py  download_traffic_data.py  feature_pipeline.py  train_avg_occupancy.py  train_max_occupancy.py  upload_features.py
src/utils/: gtfs_schedule.py
src/utils/transformations/: __init__.py  calendar_transforms.py  traffic_transforms.py  type_utils.py  weather_transforms.py
tests/: test_gtfs_schedule.py  test_koda_processor.py  test_train_avg_occupancy.py  test_train_max_occupancy.py  test_transformations.py
transformations/: __init__.py  calendar_transforms.py  traffic_transforms.py  type_utils.py  weather_transforms.py
